Login using OTP
